# python-kraken-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  client.py  codecov.yml  del.txt  examples.py  main.py  pylint_run.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: .copilot-instructions.md  CITATION  CONTRIBUTING.md  FUNDING.yml  codecov.yml  dependabot.yaml  pull_request_template.md  release.yaml  self-review.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: _build.yaml  _build.yml  _build_doc.yaml  _build_doc.yml  _codecov.yaml  _codecov.yml  _codeql.yaml  _codeql.yml  _pre_commit.yaml  _pre_commit.yml  _pypi_publish.yaml  _pypi_publish.yml  _pypi_test_publish.yaml  _test.yml  _test_futures.yml  _test_futures_private.yaml  _test_futures_private.yml  _test_futures_public.yaml  _test_futures_public.yml  _test_nft_private.yaml  _test_nft_public.yaml  _test_spot.yml  _test_spot_private.yaml  _test_spot_private.yml  _test_spot_public.yaml  _test_spot_public.yml  additional_tests.yml  build.yml  cflite_pr.yaml  cicd.yaml  cicd.yml  codecov.yml  codeql.yaml  codeql.yml  dependabot_auto_approve.yaml  dependabot_auto_merge.yaml  dev_testpyupload.yml  manual_build.yaml  manual_codeql.yaml  manual_pre_commit.yaml  (+8 more)
.github/workflows/templates/: pre_commit.yml
base_request/: base_request.py
doc/: 01_introduction.rst  07_issues.rst  Makefile  conf.py  index.rst  introduction.rst  issues.rst  links.rst  requirements.txt
doc/02_getting_started/: getting_started.rst
doc/03_examples/: command_line_interface.rst  rest_example_usage.rst
doc/03_examples/rest_examples/: futures_rest_examples.rst  futures_ws_examples.rst  xstocks_rest_examples.rst
doc/03_examples/trading_bot_templates/: futures_bot_template.rst  spot_bot_templates.rst  spot_orderbook.rst
doc/04_spot/: rest.rst  websockets.rst
doc/05_futures/: rest.rst
doc/06_exceptions/: exceptions.rst
doc/08_about/: license.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/about/: license.rst
doc/base_api/: base_api.rst
doc/examples/: command_line_interface.rst  market_client_example.ipynb  rest_example_usage.rst  trading_bot_templates.rst
doc/examples/rest_ws_samples/: futures_rest_examples.rst  futures_ws_examples.rst  spot_rest_examples.rst  spot_ws_examples.rst
doc/examples/trading_bot_templates/: futures_bot_template.rst  spot_bot_templates.rst  spot_orderbook.rst
doc/exceptions/: exceptions.rst
doc/futures/: rest.rst  websockets.rst
doc/getting_started/: getting_started.rst
doc/nft/: rest.rst
doc/spot/: rest.rst  websockets.rst
doc/src/: introduction.rst  issues.rst
doc/src/examples/: rest_example_usage.rst
doc/src/getting_started/: getting_started.rst
doc/src/nft/: rest.rst
doc/src/spot/: rest.rst
docs/: conf.py  index.rst  links.rst  requirements.txt
docs/src/: introduction.rst  issues.rst
docs/src/about/: license.rst
docs/src/base_api/: base_api.rst
docs/src/examples/: futures_bot_template.rst  futures_ws_examples.rst  rest_sample_usage.rst  spot_bot_template.rst  spot_bot_templates.rst  spot_orderbook.rst  spot_ws_examples.rst  trading_bot_templates.rst
docs/src/futures/: futures_rest.rst  index.rst  (+3 more)
examples/: README.md  examples.py  futures_examples.py  futures_trading_bot_example.py  futures_trading_bot_template.py  futures_ws_examples.py  market_client_example.ipynb  spot_examples.py  spot_orderbook.py  spot_orderbook_v1.py  spot_orderbook_v2.py  spot_trading_bot.py  spot_trading_bot_example.py  spot_trading_bot_template.py  spot_trading_bot_template_v1.py  spot_trading_bot_template_v2.py  spot_ws_examples.py  spot_ws_examples_v1.py  spot_ws_examples_v2.py  ws_examples.py  xstocks_examples.py
funding/: funding.py
hooks/: pre-commit
kraken/: __init__.py  __version__.py  cli.py  client.py
kraken/base_api/: __init__.py  base_api.py
kraken/exceptions/: __init__.py  exceptions.py
kraken/funding/: funding.py
kraken/futures/: __init__.py  client.py  funding.py  market.py  trade.py  user.py  ws_client.py
kraken/market/: market.py
kraken/nft/: __init__.py  market.py  trade.py
kraken/spot/: __init__.py  client.py  earn.py  funding.py  market.py  orderbook.py  orderbook_v1.py  orderbook_v2.py  staking.py  trade.py  user.py  websocket_v1.py  websocket_v2.py  ws_client.py
kraken/staking/: staking.py
kraken/tests/: futures.rest.test.py  sport.rest.test.py
kraken/trade/: trade.py
kraken/user/: user.py
kraken/utils/: __init__.py  utils.py
kraken/websocket/: websocket.py
kraken/ws_client/: ws_client.py
market/: market.py
src/kraken/: __init__.py  cli.py
staking/: staking.py
tests/: __init__.py  futures.rest.test.py  futures_rest_test.py  spot.rest.test.py  spot_rest_test.py  test_futures_rest.py  test_futures_websocket.py  test_spot_rest.py  test_spot_websocket.py
tests/cli/: __init__.py  basic.sh  conftest.py  test_cli.py
tests/futures/: __init__.py  conftest.py  helper.py  test_futures_base_api.py  test_futures_base_api_unit.py  test_futures_funding.py  test_futures_market.py  test_futures_trade.py  test_futures_user.py  test_futures_websocket.py
tests/nft/: __init__.py  conftest.py  helper.py  test_nft_market.py  test_nft_trade.py
tests/spot/: __init__.py  conftest.py  helper.py  test_spot_base_api.py  test_spot_base_api_unit.py  test_spot_earn.py  test_spot_funding.py  test_spot_market.py  test_spot_orderbook.py  test_spot_orderbook_v1.py  test_spot_orderbook_v2.py  test_spot_staking.py  test_spot_trade.py  test_spot_user.py  test_spot_utils.py  test_spot_websocket.py  test_spot_websocket_internals.py  test_spot_websocket_v1.py  test_spot_websocket_v2.py  test_xstocks_basic.py
trade/: trade.py
user/: user.py
websocket/: websocket.py
ws_client/: ws_client.py
(+117 files in other folders)
